{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 28,
  "lineage": "36874213-0707-ee57-97ba-c808fa0a3a7c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09524ab2643b048f0",
            "arn": "arn:aws:ec2:eu-west-2:026486699163:instance/i-0297d2113289787ff",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0297d2113289787ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-001a89d0d4d978ee8"
              }
            ],
            "primary_network_interface_id": "eni-001a89d0d4d978ee8",
            "private_dns": "ip-10-0-1-111.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.111",
            "public_ip": "18.170.55.142",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-037c919f81726c0bd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b977cbd52e0ead0",
            "tags": {
              "Name": "server-sqp-exer-02",
              "Owner": "jenkins"
            },
            "tags_all": {
              "Name": "server-sqp-exer-02",
              "Owner": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070ef2bb81206f4f5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026486699163",
            "id": "i-0297d2113289787ff",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_key_pair.aws_key",
            "aws_security_group.sgrp",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:026486699163:internet-gateway/igw-00179e41d49755362",
            "id": "igw-00179e41d49755362",
            "owner_id": "026486699163",
            "region": "eu-west-2",
            "tags": {
              "Name": "ig-sqp-exer-02"
            },
            "tags_all": {
              "Name": "ig-sqp-exer-02"
            },
            "vpc_id": "vpc-07d28033a05113afe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026486699163",
            "id": "igw-00179e41d49755362",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:026486699163:route-table/rtb-05e2ea5f57c9c1d14",
            "id": "rtb-05e2ea5f57c9c1d14",
            "owner_id": "026486699163",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00179e41d49755362",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-sqp-exer-02"
            },
            "tags_all": {
              "Name": "rt-sqp-exer-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d28033a05113afe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026486699163",
            "id": "rtb-05e2ea5f57c9c1d14",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06525c522656dfbee",
            "region": "eu-west-2",
            "route_table_id": "rtb-05e2ea5f57c9c1d14",
            "subnet_id": "subnet-09b977cbd52e0ead0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026486699163",
            "id": "rtbassoc-06525c522656dfbee",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgrp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:026486699163:security-group/sg-070ef2bb81206f4f5",
            "description": "Security Group for Exercise 02",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070ef2bb81206f4f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgrp-sqp-exer-02",
            "name_prefix": "",
            "owner_id": "026486699163",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-sqp-exer-02"
            },
            "tags_all": {
              "Name": "sg-sqp-exer-02"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d28033a05113afe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026486699163",
            "id": "sg-070ef2bb81206f4f5",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:026486699163:subnet/subnet-09b977cbd52e0ead0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b977cbd52e0ead0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026486699163",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "subnet-public-sqp-exer-02"
            },
            "tags_all": {
              "Name": "subnet-public-sqp-exer-02"
            },
            "vpc_id": "vpc-07d28033a05113afe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026486699163",
            "id": "subnet-09b977cbd52e0ead0",
            "region": "eu-west-2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:026486699163:vpc/vpc-07d28033a05113afe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-099e36779fdbca613",
            "default_route_table_id": "rtb-05a5fa94fd6bf139c",
            "default_security_group_id": "sg-0f7ce21ea7aa455ce",
            "dhcp_options_id": "dopt-0f0a39033c819089a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d28033a05113afe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a5fa94fd6bf139c",
            "owner_id": "026486699163",
            "region": "eu-west-2",
            "tags": {
              "Name": "vpc-sqp-exer-02"
            },
            "tags_all": {
              "Name": "vpc-sqp-exer-02"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026486699163",
            "id": "vpc-07d28033a05113afe",
            "region": "eu-west-2"
          }
        }
      ]
    }
  ]
}